@@ -1,5 +1,11 @@
 2018-01-20  Bruno Haible  <bruno@clisp.org>
 
+	Fix test failure regarding BOOLE on AIX with xlc.
+	* makemake.in: When compiling lisparit.c with xlc for AIX and -DWIDE,
+	reduce optimizations.
+
+2018-01-20  Bruno Haible  <bruno@clisp.org>
+
 	Comment.
 	* stream.d (handle_pathname): Add comment about AIX.
 
